# RendererApp

./: CMakeLists.txt  README.md  main.cpp
Assets/Cache/OpenGL/: Renderer2D_Triangle.glsl.cached_opengl.frag  Renderer2D_Triangle.glsl.cached_vulkan.frag
Assets/Shaders/: BumpMappingShader.glsl  Renderer2D_Triangle.glsl  TextureShader.glsl
Buffers/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContex.cpp  GraphicsContex.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Components/: Components.h
Core/: Core.h  GUID.cpp  GUID.h  GlobalSettings.cpp  GlobalSettings.h  KeyCodes.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  MouseCodes.h  Object.cpp  Object.h  OpenGLInput.cpp  OpenGLInput.h  ProjectPaths.cpp  ProjectPaths.h  Renderer.cpp  Renderer.h  RendererApp.cpp  RendererApp.h  RendererCamera.cpp  RendererCamera.h  Timer.h  Window.cpp  Window.h
Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
Scene/: Entity.h  RendererScene.cpp  RendererScene.h
